--- a/src/components/Comment/Comment.module.css
+++ b/src/components/Comment/Comment.module.css
@@ -1,3 +1,109 @@
 .comment {
+
+    margin-top: 1.5rem;
+    display: flex;
+    gap: 1rem;
+
     
 }
+
+
+
+
+.commentBox {
+    flex: 1;
+
+
+    footer {
+        margin-top: 1rem;
+        
+
+
+        button {
+            background: transparent;
+            border: 0;
+            color: var(--gray-400);
+            cursor: pointer;
+
+            display: flex;
+            border-radius: 8px;
+            align-items: center;
+            
+        }
+
+        button:hover {
+            color: var(--green-300);
+        }
+
+        button  svg {
+            margin-right: 0.5rem;
+        }
+
+        span::before {
+            content: " \2022"  ;
+            padding: 0 0.25rem;
+
+        }
+    }
+    
+}
+
+
+.commentContent {
+   
+    padding: 1rem;
+    border-radius: 8px;
+    background-color: var(--gray-700);
+
+
+    
+
+
+    p {
+    padding-top: 1rem;
+    color: var(--gray-300);
+    font-size: 0.9rem;
+    
+    }
+  
+}
+
+.commentContent header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+
+}
+
+   
+.authorAndTime strong {
+    display: block;
+    font-size: 0.9rem;
+    line-height: 1.6;
+}
+    
+.authorAndTime span {
+    display: block;
+    font-size: 0.75rem;
+    line-height: 1.6;
+    color: var(--gray-400);
+   
+}
+.buttonDelete {
+    background: transparent;
+    border: none;
+    color: var(--gray-400);
+    cursor: pointer;
+
+    line-height: 0;
+    border-radius: 2px;
+}
+
+.buttonDelete:hover {
+    color: var(--red-500);
+}
+
+
+
+
+
