--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -4,9 +4,9 @@
     overflow: hidden;
 }
 
-.sidebar img {
+.imagem {
     width: 100%;
-    height:72px;
+    height: 72px;
     object-fit: cover;
 }
 
@@ -16,13 +16,7 @@
     align-items: center;
     margin-top: -2rem;
 
-    img {
-        width: 6rem;
-        height: 6rem;
-        border-radius: 8px;
-        border: 4px solid var(--gray-800);
-        outline: 2px solid var(--green-500);
-    }
+   
 
 
     strong {
